# mock-engine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: App.hpp.64CB133D02C5DBE6.idx  Color.hpp.5BE3E15EFCC155BD.idx  Engine.hpp.29C8FEB5A61C3872.idx  Input.hpp.F44B9F3592D9F150.idx  RenderCtx.hpp.5DD98FFE2D08552E.idx  Resource.hpp.76569015DB8A8F64.idx  Texture.hpp.4342BAE555167416.idx  Vector.hpp.BD118B48600C2D07.idx  main.cpp.6F61208ACBD640EA.idx  main_functional.cpp.AE6CBAB7ECA3DFAB.idx
assets/: circle.frag.glsl  circle.vert.glsl  my_shader.frag.glsl  my_shader.vert.glsl
include/: Logger.hpp
include/Engine/: App.hpp  Color.hpp  Engine.hpp  Entity.hpp  Geometry.hpp  Input.hpp  Logger.hpp  RenderCtx.hpp  Resource.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  Sound.hpp  Texture.hpp  TextureAtlas.hpp  Util.hpp  Vector.hpp
include/Test/: PlayerEntity.hpp
src/: App.cpp  Engine.cpp  Entity.cpp  Geometry.cpp  Input.cpp  Logger.cpp  RenderCtx.cpp  Resource.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp  Util.cpp  main_functional.cpp
src/Test/: PlayerEntity.cpp
usage/: common.hpp  main.cpp
